--- a/mail/report/2018-07-25 13_39_30result.html
+++ b/mail/report/2018-07-25 13_39_30result.html
@@ -189,9 +189,9 @@ function showOutput(id, name) {
 
 <div class='heading'>
 <h1>测试报告</h1>
-<p class='attribute'><strong>Start Time:</strong> 2018-07-24 19:28:28</p>
-<p class='attribute'><strong>Duration:</strong> 0:00:15.277000</p>
-<p class='attribute'><strong>Status:</strong> Pass 1</p>
+<p class='attribute'><strong>Start Time:</strong> 2018-07-25 13:39:30</p>
+<p class='attribute'><strong>Duration:</strong> 0:00:30.640000</p>
+<p class='attribute'><strong>Status:</strong> Pass 2</p>
 
 <p class='description'>运行环境: window 7, Firefore</p>
 </div>
@@ -223,11 +223,11 @@ function showOutput(id, name) {
 
 <tr class='passClass'>
     <td>login_case.LoginTest</td>
-    <td>1</td>
-    <td>1</td>
+    <td>2</td>
+    <td>2</td>
     <td>0</td>
     <td>0</td>
-    <td><a href="javascript:showClassDetail('c1',1)">Detail</a></td>
+    <td><a href="javascript:showClassDetail('c1',2)">Detail</a></td>
 </tr>
 
 <tr id='pt1.1' class='hiddenRow'>
@@ -247,10 +247,35 @@ function showOutput(id, name) {
         
 pt1.1: test driver
 1111
+F:/Workspace/selenium/paperless_project/mail/image/20180725133946success.jpg
+
+
+        </pre>
+    </div>
+    <!--css div popup end-->
+
+    </td>
+</tr>
+
+<tr id='pt1.2' class='hiddenRow'>
+    <td class='none'><div class='testcase'>test_login_user_pwd_erroe: 用户名或者密码错误</div></td>
+    <td colspan='5' align='center'>
+
+    <!--css div popup start-->
+    <a class="popup_link" onfocus='this.blur();' href="javascript:showTestDetail('div_pt1.2')" >
+        pass</a>
+
+    <div id='div_pt1.2' class="popup_window">
+        <div style='text-align: right; color:red;cursor:pointer'>
+        <a onfocus='this.blur();' onclick="document.getElementById('div_pt1.2').style.display = 'none' " >
+           [x]</a>
+        </div>
+        <pre>
+        
+pt1.2: test driver
 1111
-2222
-ccc
-F:/Workspace/selenium/paperless_project/mail/report/image/20180724192844success.jpg
+帐号不存在!
+F:/Workspace/selenium/paperless_project/mail/image/20180725134000user_pwd_error.jpg
 
 
         </pre>
@@ -262,8 +287,8 @@ F:/Workspace/selenium/paperless_project/mail/report/image/20180724192844success.
 
 <tr id='total_row'>
     <td>Total</td>
-    <td>1</td>
-    <td>1</td>
+    <td>2</td>
+    <td>2</td>
     <td>0</td>
     <td>0</td>
     <td>&nbsp;</td>
